<resources>
    <string name="app_name">Rock Paper Scissors Board Game</string>
    <string name="app_name_short">Rock Paper Scissors</string>
    <string name="sStartButton">Game vs Friend</string>
    <string name="sStartButtonAI">Game vs AI</string>
    <string name="sContinueButton">Continue Game</string>
    <string name="sGameDescDefault">Rock Paper Scissors Board Game with equal amount of figures per type</string>
    <string name="sGameDescLizardSpock">Rock Paper Scissors Lizard Spock Board Game with equal amount of figures per type</string>
    <string name="sGameDescDefaultManual">Rock Paper Scissors Board Game with manually chosen amount of figures per type</string>
    <string name="sGameDescLizardSpockManual">Rock Paper Scissors Lizard Spock Board Game with manually chosen amount of figures per type</string>
    <string name="sHome">Home</string>
    <string name="onTurn">Player %1$d is on turn</string>
    <!-- Drawer -->
    <string name="sMenuHelp">Help</string>
    <string name="sMenuAbout">About</string>
    <string name="sMenuSettings">Settings</string>
    <string name="sNavigationDrawerOpen">Open navigation drawer</string>
    <string name="sNavigationDrawerClose">Close navigation drawer</string>
    <!-- Help -->
    <string name="sHelp">Help</string>
    <string name="sHelpOverviewHeading">Overview</string>
    <string name="sHelpExample">Example Help Entry</string>
    <string name="sHelpCategoryExample">Example Help Category</string>
    <string name="sHelpPrivacyHeading">Privacy Info</string>
    <string name="sHelpPermissionsHeading">Permissions</string>
    <string name="sHelpPermissionsDescription">Privacy Friendly Rock Paper Scissors Board Game does not use any permissions</string>
    <string name="sHelpIntro">Welcome to the help page. This app is a board game variant of the famous hand game Rock-Paper-Scissors. It features a single device multiplayer with different game modes.</string>
    <string name="sModesCategory">Gamemodes</string>
    <string name="sModeSummary">The app features several gamemodes that can be accessed by either swiping in the main menu or tapping the arrow buttons</string>
    <string name="sMode1">RockPaperScissors - Default</string>
    <string name="sMode1Summary">This game mode features the default game with 5 Rocks, 5 Papers, 5 Scissors and one Flag for each player.</string>
    <string name="sMode2">RockPaperScissors - Manual</string>
    <string name="sMode2Summary">This game mode features the default game with the option for each player to choose on their own how many figures of each category they want to have.</string>
    <string name="sMode3">RockPaperScissorsLizardSpock - Default</string>
    <string name="sMode3Summary">This game mode features the extended game with lizard and spock figures with 3 rocks, 3 papers, 3 scissors, 3 lizards, 3 spocks and one Flag for each player.</string>
    <string name="sMode4">RockPaperScissorsLizardSpock - Manual</string>
    <string name="sMode4Summary">This game mode features the extended game with lizard and spock figures with the option for each player to choose on their own how many figures of each category they want to have.</string>
    <string name="sHelpMoveCategory">Moving</string>
    <string name="sHelpMoveSwype">Moving by swyping</string>
    <string name="sHelpMoveSwypeSummary">You can move figures by tapping it and than swiping it to the field you want it to go to.</string>
    <string name="sHelpMoveTap">Moving by tapping</string>
    <string name="sHelpMoveTapSummary">You can also move by tapping a figure once and then tapping the destination. By tapping the figure you will also get a highlighting for possible destinations.</string>
    <string name="sHelpFightCategory">Fighting</string>
    <string name="sHelpFight">Starting a fight</string>
    <string name="sHelpFightSummary">To start a fight move your figure onto a field occupied by an opponents figure. The figures will then fight based on the principles of Rock Paper Scissor or Rock Paper Scissor Lizard Spock</string>
    <string name="sHelpDraw">Draws</string>
    <string name="sHelpDrawSummary">When a draw occurs you as well as your opponent will be asked to select a new type for your figure. Both of the new figures will then reenter the fight. The types remain after the fight.</string>
    <string name="sHelpWin">Winning the game</string>
    <string name="sHelpWinSummary">The game is won when you discover the opponents flag.</string>
    <!-- Settings -->
    <string name="sTitleActivitySettings">Settings</string>
    <string name="sPrefHeaderGeneral">General</string>
    <string name="sPrefExampleSwitch">Example Switch</string>
    <string name="sPrefExampleSwitch_summary">Example Switch Summary</string>
    <string name="sPrefExampleSummary">Example Summary</string>
    <string name="sPrefFightDialogTitle">Use Timer for Fight Dialog</string>
    <string name="sPrefFightDialogSummary">Use timer to dismiss the dialog shown in a fight or dismiss manually</string>
    <string name="sPrefTimerTitle">Seconds for Timeout</string>
    <string name="sPrefTimerSummary">Choose after how many seconds the dialog should be dismissed</string>
    <string name="sKeyTimerSwitch" translatable="false">key_timer_switch</string>
    <string name="sKeyTimerList" translatable="false">key_timer_list</string>
    <!-- About -->
    <string name="sAbout">About</string>
    <string name="sApp_name_prefix">Privacy Friendly Rock Paper Scissors Board Game</string>
    <string name="sVersionNumber" translatable="false">Version v%s</string>
    <string name="sAboutAuthor">Author:</string>
    <string name="sAboutAuthorName">David Giessing and contributors</string>
    <string name="sAboutAffiliation">In affiliation with</string>
    <string name="sPrivacyFriendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology. Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="sMoreInfo">More information can be found on:</string>
    <string name="sUrl" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="sUrlRepo" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-rock-paper-scissors-boardgame">Github-Repo</a></string>
    <!-- HandoverDialog -->
    <string name="sDialogHandOverMessage">Please hand over the device and confirm</string>
    <string name="sDialogHandOverTitle">It\'s your opponents turn</string>
    <string name="sDialogHandOverOkButton">Okay</string>
    <!-- WelcomeDialog -->
    <string name="sWelcomeTitle">Welcome</string>
    <string name="sWelcome">Welcome to Privacy Friendly Rock Paper Scissors. Press the arrow keys or swype to access the different game modes. </string>
    <!-- FightDialog -->
    <string name="sFightDialogAttacker">Attacker</string>
    <string name="sFightDialogAttacked">Attacked</string>
    <string name="sFightDialogWinner">Winner</string>
    <string name="sFightDialogTitle">Fight</string>
    <string name="sFightDialogSeconds">Dismiss (%1$d)</string>
    <!-- WinDialog -->
    <string name="sWinDialogTitle">Congratulations!</string>
    <string name="sWinDialogText">You discovered the enemies flag and won the game!</string>
    <string name="sWinDialogBack">Back to Main Menu</string>
    <string name="sWinDialogShowBoard">Show Board</string>
    <!-- DrawDialog -->
    <string name="sDrawDialogTitle">Draw! Pick a new Figure Player %1$d</string>
    <!-- Toasts -->
    <string name="sToastEnemy">"This is not your figure"</string>
    <string name="sToastFlag">"Flags can not move"</string>
    <string name="sToastEmpty">Selection of empty cells is not permitted</string>
    <!-- AssignmentDialog -->
    <string name="sAssignmentTitle">Please submit your team Player %1$d</string>
    <string name="sAssignmentRock">Number of Rocks in your team: %1$d</string>
    <string name="sAssignmentPaper">Number of Papers in your team: %1$d</string>
    <string name="sAssignmentScissor">Number of Scissors in your team: %1$d</string>
    <string name="sAssignmentLizard">Number of Lizards in your team: %1$d</string>
    <string name="sAssignmentSpock">Number of Spocks in your team: %1$d</string>
    <!-- DeleteSaveGameDialog-->
    <string name="sDeleteTitle">Delete Save Game</string>
    <string name="sDeleteMessage">Do you really want to delete this save game?</string>
    <string name="sNoDeletion">No</string>
    <string name="sPrefTimedDialog">Timed Fight Dialog</string>
    <string name="sAssignmentIncomplete">You need 15 figures for your team (Currently: %1$d)</string>

    <!-- ### TUTORIAL DIALOG ### -->
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">Welcome to Privacy Friendly Rock Paper Scissors Boardgame.</string>

    <string name="slide2_heading">Boardgame</string>
    <string name="slide2_text">Rock Paper Scissors Boardgame is a combination of Rock Paper Scissors and Chess. Rocks, papers and scissors are the figures of the game and can \"fight\" against each other.</string>

    <string name="slide3_heading">How to play</string>
    <string name="slide3_text">The game\'s aim is capturing your opponents flag which is hidden between the opponent\'s figure. The opponent can either be another person or a computer. </string>

    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="main_button_welcomedialog">Show Welcome</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="tutorial">Tutorial</string>
	<string name="dialog_goodbye_google_title">Goodbye Google Play 😢</string>
    <string name="dialog_goodbye_google_desc">Unfortunately, our apps have to say goodbye to Google Play. The app is still usable but will not receive any updates in the future.\nYou can find more information about the reasons why this is not the end of the Privacy Friendly Apps on our website:\n\n<a href="https://secuso.aifb.kit.edu/english/2809.php">Click here to learn more</a>
    </string>
    <string name="dialog_goodbye_google_deactivate_notice">Don\'t show this notice again.</string>
</resources>
