<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/sPrefTimedDialog">
        <SwitchPreference
            android:id="@+id/pref_timer_switch"
            android:key="@string/sKeyTimerSwitch"
            android:title="@string/sPrefFightDialogTitle"
            android:summary="@string/sPrefFightDialogSummary"
            android:defaultValue="true" />
        <ListPreference
            android:id="@+id/pref_timer_list"
            android:dependency="@string/sKeyTimerSwitch"
            android:key="@string/sKeyTimerList"
            android:defaultValue="3"
            android:title="@string/sPrefTimerTitle"
            android:summary="@string/sPrefTimerSummary"
            android:entries="@array/secondsLabel"
            android:entryValues="@array/secondsLabel"
            />
    </PreferenceCategory>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!-- <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->

</PreferenceScreen>
