<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    tools:context=".activities.HomeActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activities.HomeActivity"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_home"
        android:orientation="vertical"
        android:weightSum="10"
        android:gravity="center"
        style="?android:buttonBarStyle">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layoutDirection="ltr"
            android:layout_weight="4">

            <android.support.v4.view.ViewPager
                android:id="@+id/scroller"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <ImageView
                android:id="@+id/arrow_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_centerVertical="true"
                android:onClick="onClick" />

            <ImageView
                android:id="@+id/arrow_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_centerVertical="true"
                android:onClick="onClick" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".activities.HomeActivity"
            android:orientation="vertical"
            android:weightSum="8"
            android:divider="#000"
            android:baselineAligned="false"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_weight="4"
                android:gravity="center"
                android:id="@+id/GameDesc" />

            <Button
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/button_fullwidth"
                android:textSize="25sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/sStartButton"
                android:id="@+id/game_button_start"
                android:onClick="startGame" />

            <Button
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/button_fullwidth"
                android:textSize="25sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/sStartButtonAI"
                android:id="@+id/game_button_start_ai"
                android:onClick="startGameAI"
                android:visibility="gone"/>

            <Button
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/button_fullwidth"
                android:textSize="25sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/sContinueButton"
                android:id="@+id/game_button_continue"
                android:onClick="continueGame" />

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>